--- a/210126.md
+++ b/210126.md
@@ -206,9 +206,7 @@ while (조건문) {
     String input = scanner.nextLine(); // 입력값을 input 변수에 저장
     ```
 
-    - Scanner 객체를 생성하여, 콘솔에 입력된 문자열을 한 번에 읽음
-
-​
+    - Scanner 객체를 생성하여, 콘솔에 입력된 문자열을 한 번에 읽음​
 
 :honey_pot: 자동으로 import 해주는 단축키 : `ctrl + shift + O`
 
@@ -297,9 +295,9 @@ Outter: for(int i=0; i<10; i++) {
 > 객체(Object)의 번지를 참조하는 타입
 > 배열, 열거, 클래스, 인터페이스 타입
 
-| 기본 타입 변수           | 참조 타입 변수            |
-| ------------------------ | ------------------------- |
-| 실제 값을 변수 안에 저장 | **주소**를 통해 객체 참조 |
+| 기본 타입 변수             | 참조 타입 변수          |
+| -------------------------- | ----------------------- |
+| 실제 `값`을 변수 안에 저장 | `주소`를 통해 객체 참조 |
 
 
 
@@ -505,10 +503,12 @@ System.out.println("---원본 데이터---");
 for (int i=0; i<ary.length; i++) {
     System.out.println(ary[i]);
 } // 100 20 30
+
 System.out.println("---얕은 복사---");
 for (int i=0; i<cpy1.length; i++) {
     System.out.println(cpy1[i]);
 } // 100 20 30
+
 System.out.println("---깊은 복사---");
 for (int i=0; i<cpy2.length; i++) {
     System.out.println(cpy2[i]);
