Update | 입력 문제와 해결법

--- a/210128.md
+++ b/210128.md
@@ -292,6 +292,8 @@ Student s = new Student(26,"고길동","수학과");
 
 
 
+---
+
 
 
 # :honey_pot: 워크스페이스에 파일 추가
@@ -301,3 +303,61 @@ Student s = new Student(26,"고길동","수학과");
 
 - JDK 버전이 안 맞아서 가져온 프로젝트가 실행이 안 될 수도 있음
   - 해당 프로젝트에서 `Build Path - Configure Build Path - Libraries` 가서 JDK 버전 바꾸기
+
+
+
+# :bulb: next() vs nextLine() :question:
+
+> **next()** : `공백`(스페이스) 전까지 입력받은 문자열 반환
+> **nextLine()** : `엔터` 치기 전까지 쓴 문자열 모두 반환
+
+
+
+:lock: 입력하지 않았는데 다음으로 넘어가서 제대로 입력되지 않음
+
+```java
+System.out.print("계좌번호: ");
+String ano = scanner.nextLine();
+System.out.print("계좌주: ");
+String owner = scanner.nextLine();
+System.out.print("초기입금액: ");
+int balance = scanner.nextInt();
+```
+
+- 콘솔에 입력하고 엔터를 누를 때, 그 직전의 값을 반환하여 ano에 저장하고, 누른 엔터 값을 바로 다음 입력값으로 읽어버림
+
+:key: 다음에 입력을 받아야 하는 경우, 그 전 값은 next()로 입력 받기
+
+```java
+System.out.print("계좌번호: ");
+String ano = scanner.next();
+System.out.print("계좌주: ");
+String owner = scanner.next();
+System.out.print("초기입금액: ");
+int balance = scanner.nextInt();
+```
+
+
+
+:lock: `NumberFormatException` 발생
+
+```java
+System.out.print("초기입금액: ");
+int balance = scanner.nextInt();
+System.out.print("등급(VIP:1, Gold:2, Silver:3, Normal:4): ");
+int ngrade = Integer.parseInt(scanner.nextLine());
+```
+
+- **NumberFormatException**는 숫자로 변환될 수 없는 문자열을 숫자로 변환할 경우에 발생
+- nextInt() 때문에 바로 뒤에 nextLine()에 빈값이 들어가고, 그 값을 정수로 바꿀 수 없어서 발생한 듯!
+
+:key: 다음 값을 입력받기 전에, nextLine()으로 한 줄 더 입력 받아서 엔터 값 없애기
+
+```java
+System.out.print("초기입금액: ");
+int balance = scanner.nextInt();
+scanner.nextLine(); // 엔터 입력 받기
+System.out.print("등급(VIP:1, Gold:2, Silver:3, Normal:4): ");
+int ngrade = Integer.parseInt(scanner.nextLine());
+```
+
