내용 추가 : 서버 설정

--- a/Docs/TIL/210310.md
+++ b/Docs/TIL/210310.md
@@ -94,3 +94,14 @@
 
   - db 관련 부분
 
+
+
+## 서버 설정
+
+1. 하단에 Servers 탭이 없을 경우 Window - Show View - Servers
+2. New - Server
+3. Apache - Tomcat v8.5 Server
+4. Tomcat 경로 설정
+
+:bulb: Servers에서 server.xml에서 포트 번호 변경 가능
+
