--- a/Docs/TIL/210323-210324.md
+++ b/Docs/TIL/210323-210324.md
@@ -113,6 +113,22 @@ public String login(Model model, ...) {
 - 메서드 호출 시 Model 클래스 객체 생성
 - JSP에 전달할 데이터를 model에 `addAttribute()` 메서드를 이용해 바인딩
 
+## @PathVariable
+
+```java
+public int XXX(@PathVariable("num") int num) { ... }
+```
+
+브라우저에서 요청 URL로 전달된 매개변수를 가져옴
+
+## @RequestBody
+
+```java
+public void XXX(@RequestBody MemberVO vo) { ... }
+```
+
+브라우저에서 전달되는 json 데이터를 객체로 자동 변환
+
 
 
 # REST API
@@ -121,3 +137,40 @@ public String login(Model model, ...) {
 - `@RestController` : 컨트롤러가 브라우저로 view(.jsp)가 아닌 **데이터** 자체(기본형 텍스트, 객체, Map)를 전송
 - `@ResponseBody`를 적용하면 jsp가 아닌 텍스트나 json 결과를 전송
 - @Controller 클래스 메소드에 @ResponseBody를 적용하면 @RestController와 같은 효과
+- Controlloer에 `@RequestMapping("/XXX/*")` 형태로 붙이면 각 메서드의 url 앞에 XXX가 붙음
+
+## ResponseEntity
+
+> 데이터와 상태코드를 반환
+
+```java
+@RequestMapping("/XXX")
+public ResponseEntity<List<MemberVO>> XXX() {
+    ...
+    return new ResponseEntity<List<...>>(데이터, HttpStatus.INTERNAL_SERVER_ERROR);
+}
+```
+
+```java
+@RequestMapping("/XXX")
+public ResponseEntity XXX() {
+    ...
+    return new ResponseEntity(데이터1, 데이터2, HttpStatus.CREATED);
+}
+```
+
+## HttpMethod
+
+- GET : 조회
+- POST : 삽입
+- PUT : 수정
+- DELETE : 삭제
+
+## Service vs Controller
+
+- Service
+  - DB 처리와 관련된 것들을 처리
+  - DAO를 사용해야 할 때는 서비스 이용
+- Controller
+  - logout은 DB 처리가 필요 없으므로 Service로 넘어가지 않음
+
